# wasm-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  GuessingGameMain.cpp  README.md  WasmtimeMain.cpp  compare_main_c.cpp  fib_main_c.cpp  gcd_main.cpp  main_func_with_sqrt.cpp  main_greater_than_c.cpp  main_larger_than_c.cpp  main_less_than.cpp  main_multiple_columns.cpp  main_small_than.cpp  multiple_compare_main.cpp  small_than_main.cpp  wasi_main_c.cpp  wasmEdgeMain.cpp  wasmtime.hh
demo/: README.md
demo/compare/: README.md
demo/compare/compare/: Cargo.toml
demo/compare/compare/src/: compare.rs
demo/equal/: lib.wat
demo/equal/src/: lib.rs
demo/func_with_sqrt/: Cargo.toml  base64wat.txt  func_with_sqrt.wasm  lib.wat
demo/func_with_sqrt/src/: lib.rs  main.rs
demo/greater_than/: Cargo.toml  base64wat.txt  lib.wat
demo/greater_than/src/: lib.rs  main.rs
demo/guessing_game/src/: compare.rs
demo/larger_than/: README.md  larger_than.wasm  larger_than.wat
demo/larger_than/src/: lib.rs
demo/less_than/: Cargo.toml  base64wat.txt  lib.wasm  lib.wat
demo/less_than/src/: lib.rs
demo/multi_greater_than/: Cargo.toml  lib.wasm  lib.wat
demo/multi_greater_than/src/: lib.rs  main.rs
demo/multiple_columns/: Cargo.toml  base64wat.txt  lib.wasm  lib.wat  multiple_columns.wasm  multiple_columns.wat
demo/multiple_columns/src/: lib.rs  main.rs
demo/multiple_columns_compare/: Cargo.toml  multiple_columns_sqrt.wat
demo/multiple_columns_compare/src/: lib.rs  main.rs
demo/small_than/: small_than.wat
demo/small_than/src/: lib.rs
examples/: README.md
examples/addone/: Cargo.toml
examples/addone/src/: addone.rs
src/: TestWasm.cpp  add.cpp  addone.cpp  gcd.cpp  main_func_with_sqrt.cpp  main_multiple_columns.cpp
wasm/: CMakeLists.txt  wasm_manager.cpp  wasm_manager.h  wasm_manager_test.cpp  wasm_test.cpp
wasmtime-c-api/include/: wasmtime.hh
